--- a/index.html
+++ b/index.html
@@ -4,13 +4,56 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/addons/p5.dom.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/addons/p5.sound.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <meta charset="utf-8" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <style>
+      html,
+      body {
+        height: 100%;
+        margin: auto;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        /* align-items: center; */
+        background-color: black;
+      }
 
+      .count {
+        color: white;
+        font-family: "Poppins", sans-serif;
+        font-size: 16px;
+        margin-top: 5px;
+      }
+
+      h1 {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        font-family: "Poppins", sans-serif;
+        color: white;
+      }
+
+      canvas {
+        display: block;
+      }
+    </style>
   </head>
   <body>
-    <script src="sketch.js"></script>
-    <script src="boid.js"></script>
-    
+    <div class="text">
+      <h1>Two interacting viruses</h1>
+      <span class="count" id="virus1Count">Virus 1 Count: 0</span><br />
+      <span class="count" id="virus2Count">Virus 2 Count: 0</span><br />
+      <span class="count" id="susceptibleCount">Susceptible Count: 0</span
+      ><br />
+      <span class="count" id="coinfectionCount">Coinfection Count: 0</span
+      ><br />
+    </div>
+    <br />
+    <div>
+      <script src="sketch.js"></script>
+      <script src="boid.js"></script>
+    </div>
   </body>
 </html>
