--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       }
 
       .count {
-        color: white;
+        color: #ffffff; /* White color */
         font-family: "Poppins", sans-serif;
         font-size: 16px;
         margin-top: 5px;
@@ -32,7 +32,7 @@
         flex-direction: column;
         justify-content: center;
         font-family: "Poppins", sans-serif;
-        color: white;
+        color: #ffffff; /* White color */
       }
 
       canvas {
@@ -42,13 +42,14 @@
   </head>
   <body>
     <div class="text">
-      <h1>Two interacting viruses</h1>
-      <span class="count" id="virus1Count">Virus 1 Count: 0</span><br />
-      <span class="count" id="virus2Count">Virus 2 Count: 0</span><br />
-      <span class="count" id="susceptibleCount">Susceptible Count: 0</span
+      <h1 style="color: #ffffff;">Two interacting viruses</h1>
+      <span class="count" id="virus1Count" style="color: #ff0000;">Virus 1 Count: 0</span><br />
+      <span class="count" id="virus2Count" style="color: #fbff00;">Virus 2 Count: 0</span><br />
+      <span class="count" id="susceptibleCount" style="color: #4000ff;">Susceptible Count: 0</span
       ><br />
-      <span class="count" id="coinfectionCount">Coinfection Count: 0</span
+      <span class="count" id="coinfectionCount" style="color: #ffffff;">Coinfection Count: 0</span
       ><br />
+      <span class="count" id="recover" style="color: #00ff00;">Recovered Count: 0</span><br />
     </div>
     <br />
     <div>
